<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_AXIS_INFO" Id="{f68ee440-c1bd-01ff-1946-256d988b4f83}">
    <Declaration><![CDATA[TYPE U_AXIS_INFO :
UNION

  stState             : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF ST_AxisStatusCompact;

{IF defined (AXIS_MAP)}
  {info 'U_AXIS_INFO mapping activated'}
  byState  AT %Q*     : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF
                        ARRAY[1..SIZEOF(ST_AxisStatusCompact)] OF BYTE;
{ELSE}
  byState             : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF
                        ARRAY[1..SIZEOF(ST_AxisStatusCompact)] OF BYTE;
{END_IF}
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>