<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_AXIS_NC_PARAMETER" Id="{49ba669b-641b-0d9f-0bdb-d7a2c1af8bd4}">
    <Declaration><![CDATA[TYPE U_AXIS_NC_PARAMETER :
UNION

  stState             : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF ST_NcParam;

{IF defined (AXIS_MAP)}
  {info 'U_AXIS_NC_PARAM mapping activated'}
  byState   AT %Q*    : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF
                        ARRAY[1..SIZEOF(ST_NcParam)] OF BYTE;
{ELSE}
  byState             : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF
                        ARRAY[1..SIZEOF(ST_NcParam)] OF BYTE;
{END_IF}
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>