<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAPPING_out" Id="{2f982087-90b2-048b-1461-b5f12ca1e4da}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAPPING_out
VAR CONSTANT
{IF defined (AXIS_MAP)}
  {info 'MAPPING_out - ACTIVE'}
  bBypassMapping    : BOOL  := FALSE;
{ELSE}
  bBypassMapping    : BOOL  := TRUE;
{END_IF}
END_VAR
VAR
  AxisState         : U_AXIS_STATE;
  AxisInfo          : U_AXIS_INFO;
  AxisParameterRd   : U_AXIS_NC_PARAMETER;

  nAxis             : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bBypassMapping THEN RETURN; END_IF

FOR nAxis := 1 TO GVL_AXIS_CTRL.gciMaxAxis
DO
  AxisState.stState[nAxis]        := GVL_AXIS_CTRL.gstAxisControl[nAxis].FromPlc;
  AxisInfo.stState[nAxis]         := GVL_AXIS_CTRL.gfbAxisController[nAxis].StatusCompact;

  AxisParameterRd.stState[nAxis]  := GVL_AXIS_CTRL.gstAxisParam[nAxis];
END_FOR

]]></ST>
    </Implementation>
    <LineIds Name="MAPPING_out">
      <LineId Id="5" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="75" Count="1" />
      <LineId Id="86" Count="1" />
      <LineId Id="92" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="72" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>